Changes to app.js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 		<div class="tweets-container">
 			<p>Loading...</p>
 		</div>
-		<script src="js/tweets.js"></script>
+		<script src="assets/js/app.js"></script>
 	</body>
 </html>
