--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
             <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
             <link href='https://fonts.googleapis.com/css?family=Cabin+Condensed' rel='stylesheet' type='text/css'>
             <link href='https://fonts.googleapis.com/css?family=Cabin+Condensed|Archivo+Narrow' rel='stylesheet' type='text/css'>
-
+   <!-- jQuery -->         
+    <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
 
