addition of wells to bootstrap cols at bottom of page

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
 <div class="container" id="infoSpot">
 <div class="row">
   
-  <div class="col-md-5" id="wikiSpot">
+  <div class="col-xs-5 well" id="wikiSpot">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod fugiat dolores suscipit nulla tempora, fugit nisi perferendis explicabo numquam quisquam sapiente molestias quam dicta. Necessitatibus magni magnam laboriosam eum quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde vel, laboriosam ut aspernatur cumque, iusto. Voluptates, excepturi, sapiente! Tenetur repellat natus dolorem distinctio omnis tempore reiciendis ipsum cupiditate delectus qui?
   </div>
 
-<div class="col-md-2">
+<div class="col-xs-2">
   
 </div>
-  <div class="col-md-5" id="videoSpot">
+  <div class="col-xs-5 well" id="videoSpot">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sit distinctio non eligendi obcaecati cupiditate atque deleniti esse rem, dignissimos dicta fugit velit corporis blanditiis libero laborum deserunt rerum. Officiis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem aspernatur, quam. Porro doloribus nulla veritatis. Dolore tempore nulla perferendis ipsam in officia eius, fugit inventore totam! Sint, vel eum maiores!
   </div>
 
