img-responsive class added to html

--- a/index.html
+++ b/index.html
@@ -73,43 +73,43 @@
 
    <div class = "carousel-inner">
       <div class = "item active">
-         <img src = "./assets/images/Wired1.png" id = "img01" alt = "First slide">
+         <img src = "./assets/images/Wired1.png" class = "img-responsive"  id = "img01" alt = "First slide">
       </div>
       
       <div class = "item">
-         <img src = "./assets/images/Wired2.png" id = "img02" alt = "Second slide">
+         <img src = "./assets/images/Wired2.png" class = "img-responsive" id = "img02" alt = "Second slide">
       </div>
       
       <div class = "item">
-         <img src = "./assets/images/Wired3.png"  id = "img03" alt = "Third slide">
+         <img src = "./assets/images/Wired3.png" class = "img-responsive"  id = "img03" alt = "Third slide">
       </div>
 
       <div class = "item">
-         <img src = "./assets/images/Wired4.png"  id = "img04" alt = "Fourth slide">
+         <img src = "./assets/images/Wired4.png" class = "img-responsive"  id = "img04" alt = "Fourth slide">
       </div>
 
       <div class = "item">
-         <img src = "./assets/images/Wired5.png" id = "img05" alt = "Fifth slide">
+         <img src = "./assets/images/Wired5.png" class = "img-responsive"  id = "img05" alt = "Fifth slide">
       </div>
 
       <div class = "item">
-         <img src = "./assets/images/Wired6.png" id = "img06" alt = "Sixth slide">
+         <img src = "./assets/images/Wired6.png" class = "img-responsive"  id = "img06" alt = "Sixth slide">
       </div>
 
       <div class = "item">
-         <img src = "./assets/images/Wired7.png" id = "img07" alt = "Seventh slide">
+         <img src = "./assets/images/Wired7.png" class = "img-responsive"  id = "img07" alt = "Seventh slide">
       </div>
 
       <div class = "item">
-         <img src = "./assets/images/Wired8.png" id = "img08" alt = "Eighth slide">
+         <img src = "./assets/images/Wired8.png" class = "img-responsive"  id = "img08" alt = "Eighth slide">
       </div>
 
       <div class = "item">
-         <img src = "./assets/images/Wired9.png" id = "img09" alt = "Ninth slide">
+         <img src = "./assets/images/Wired9.png" class = "img-responsive"  id = "img09" alt = "Ninth slide">
       </div>
 
       <div class = "item">
-         <img src = "./assets/images/Wired10.png" id = "img10" alt = "Tenth slide">
+         <img src = "./assets/images/Wired10.png" class = "img-responsive" id = "img10" alt = "Tenth slide">
       </div>
    </div>
    
