--- a/index2.html
+++ b/index2.html
@@ -61,15 +61,15 @@
    <!-- Carousel items -->
    <div class = "carousel-inner">
       <div class = "item active">
-         <img src = "./assets/images/Wired1.png" alt = "First slide">
+         <img src = "./assets/images/Wired1.png" class = "img-reponsive" alt = "First slide">
       </div>
       
       <div class = "item">
-         <img src = "./assets/images/Wired2.png" alt = "Second slide">
+         <img src = "./assets/images/Wired2.png" class = "img-reponsive" alt = "Second slide">
       </div>
       
       <div class = "item">
-         <img src = "./assets/images/Wired3.png" alt = "Third slide">
+         <img src = "./assets/images/Wired3.png" class = "img-reponsive" alt = "Third slide">
       </div>
    </div>
    
