Added user field for submitting inputs and error messages for when input is invalid. All that's left now are minor style fixes, and further code commenting.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
   </head>
 
   <nav class="navbar navbar-default">
+  <form role="form">
+  
+    <div class="form-group">
+      <input type="text" class="form-control" id="trend-input" placeholder="Enter a Trend">
+    </div>
+  
+    
+  
+    <button id="trend-button" class="btn btn-primary">Get It!</button>
+    <div id='trend-errors'><!--list error if encounter trend error --></div>
+  </form>
   <div class="container-fluid">
     
       <h1 id="logo">TrendGetter</h1> 
