Fixed bug where indicators wouldn't show up, added more input functionality

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
   
     <button id="trend-button" class="btn btn-primary">Get It!</button>
-    <div id='trend-errors'><!--list error if encounter trend error --></div>
+    <div id='trend-mes'><!--list user submission messages --></div>
   </form>
   <div class="container-fluid">
     
