Style, comment changes

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 <div class="container" id="infoSpot">
 <div class="row">
   
-  <div class="col-md-4" id="wikiSpot">
+  <div class="col-md-4 col-xs-8 col-xs-offset-2 col-md-offset-0" id="wikiSpot">
     <!-- Wiki content shows up in here -->
   </div>
 
-  <div class="col-md-7 col-md-offset-1" id="videoSpot">
+  <div class="col-md-7 col-md-offset-1 col-xs-10 col-xs-offset-1" id="videoSpot">
     <!-- Youtube Content shows up in here -->
   </div>
 
